--- a/.travis.yml
+++ b/.travis.yml
@@ -13,7 +13,8 @@ before_install:
 script: 
   - golint ./...
   - go vet ./...
-  - go test -v ./... -parallel 10 -covermode=count -coverprofile=coverage.out
+  - go test -v -parallel 10 -covermode=count -coverprofile=main.cover.out -coverpkg=./... main
+  - echo "mode: set" > coverage.out && cat *.cover.out | grep -v mode: | sort -r | awk '{if($1 != last) {print $0;last=$1}}' >> coverage.out
 
 after_success:
   - goveralls -coverprofile=coverage.out -service=travis-ci -repotoken WVURXfIfQnohf4flfYJfa3haa9hwGwhU2
