--- a/.travis.yml
+++ b/.travis.yml
@@ -15,6 +15,8 @@ script:
   - go vet ./...
   - go test -v -parallel 10 -covermode=count -coverprofile=main.coverage.out -coverpkg=./
   - go test -v -parallel 10 -covermode=count -coverprofile=graph.coverage.out -coverpkg=./graph
+  - go test -v -parallel 10 -covermode=count -coverprofile=util.coverage.out -coverpkg=./util
+  - go test -v -parallel 10 -covermode=count -coverprofile=backends.coverage.out -coverpkg=./backends
   - cat *.coverage.out >> coverage.out
 
 after_success:
