--- a/.travis.yml
+++ b/.travis.yml
@@ -18,6 +18,7 @@ script:
   - go test -v -parallel 10 -covermode=count -coverprofile=util.coverage.out -coverpkg=./util
   - go test -v -parallel 10 -covermode=count -coverprofile=backends.coverage.out -coverpkg=./backends
   - cat *.coverage.out >> coverage.out
+  - cat coverage.out
 
 after_success:
   - goveralls -coverprofile=coverage.out -service=travis-ci -repotoken WVURXfIfQnohf4flfYJfa3haa9hwGwhU2
