--- a/.travis.yml
+++ b/.travis.yml
@@ -14,7 +14,7 @@ script:
   - golint ./...
   - go vet ./...
   - go test -v -parallel 10 -covermode=count -coverprofile=main.coverage.out -coverpkg=./
-  - go test -v -parallel 10 -covermode=count -coverprofile=graph.coverage.out -coverpkg=./graph
+#  - go test -v -parallel 10 -covermode=count -coverprofile=graph.coverage.out -coverpkg=./graph
   - go test -v -parallel 10 -covermode=count -coverprofile=util.coverage.out -coverpkg=./util
   - go test -v -parallel 10 -covermode=count -coverprofile=backends.coverage.out -coverpkg=./backends
   - cat *.coverage.out >> coverage.out
