--- a/.travis.yml
+++ b/.travis.yml
@@ -5,7 +5,7 @@ go:
   - tip
 
 before_install:
-  - go get
+  - go get go get github.com/stretchr/testify
   - go get github.com/golang/lint/golint
   - go get github.com/axw/gocov/gocov
   - go get github.com/mattn/goveralls
